--- a/moodtracker-app/server/package.json
+++ b/moodtracker-app/server/package.json
@@ -9,5 +9,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.22",
     "nodemon": "^2.0.4"
-  }
+  },
+    "scripts": {
+      "start": "node index.js"
+    }
 }
